# siq2.0

./: .cursorrules  .gitignore  .graphifyignore  .pre-commit-config.yaml  CLAUDE.md  README.MD  README.md  REALTIME_ALTERNATIVES.md  SUPABASE_SETUP.md  dark-mode-colors.html  docker-compose.yml
api/: .dockerignore  .gitignore  CLAUDE.md  CODEX_REVIEW.md  Dockerfile  Pipfile  Procfile  alembic.ini  app.py  config.py  database.db  db.py  db_json.py  download_flights_from_drive.py  export_flights_to_files.py  export_qualificacoes_to_json.py  import_flights.py  json_to_file.py  pyproject.toml  requirements.txt  teste.py  wsgi.py
api/alembic/: README  env.py
api/alembic/versions/: 043089ab34d8_add_status_field_to_tripulantes.py  14de4411eb64_adiciona_ondelete_cascade_nas_fk_de_.py  75d13fb64237_baseline_schema.py  849a6db57a22_adiciona_paras_aos_ocs_e_nvg2_aos_.py  88d1c145826b_initial_schema.py  918c5ee2f559_added_qualifications_bskit_crew_e_paras_.py  9b77f14239ab_initial_db.py  a1b2c3d4e5f6_rename_controlador_to_coordenador_tatico.py  a2b3c4d5e6f7_replace_recover_with_reset_token_columns.py  add_rbac_tables.py  add_uq_tripulante_qualificacao.py  b2c3d4e5f6a7_add_vir_vn_con_to_flight_pilots.py  b6738f337d34_added_bskit_to_flight_pilot_.py  c34264f16adc_mudar_enum_para_native_enum_false.py  d4d237e2471c_add_performance_indexes.py  d4e5f6a7b8c9_add_uq_flight_natural_key.py  dfd3a3d34bb4_remove_admin_field_from_tripulantes.py  e1f2a3b4c5d6_add_missing_indexes.py  e5f6a7b8c9d0_add_payload_key_to_qualificacoes.py  e77ead037188_adiciona_as_novas_colunas_dos_tempos_de_.py  ed7e36b87199_added_cto_mono_sid_and_nfp_to_.py  f040e342295f_added_bskit_to_pilot_qualifications.py  f33e1e6be9bf_added_new_qualifications_to_.py  (+2 more)
api/app/: __init__.py
api/database/: mydb.db
api/functions/: gdrive.py  pdfcreator.py  sendemail.py
api/models/: .models.py.old  __init__.py  basemodels.py  crew.py  enums.py  flights.py  pilots.py  qualificacoes.py  tripulantes.py  users.py
api/routes/: api_blueprint.py  dashboard_blueprint.py  flight_blueprint.py  routes.py  users_blueprint.py
api/scripts/: cleanup_duplicate_tripulante_qualificacoes.py  create_superadmin.py  download_flights_from_drive.py  export_flights_to_files.py  export_qualificacoes_to_json.py  file_to_json.py  generate_jwt_key.py  import_flights.py  json_to_file.py  qualifications.json  set_all_users_lowest_level.py  set_user_role_level.py  transform_old_flights.py  upload_user_base.py
api/tests/: conftest.py
(+427 files in other folders)
